DolphinContextMenu: Allow disabling "Open Terminal" action

BUG: 436323
FIXED-IN: 21.08